<?xml version="1.0" encoding="utf-8"?>
<!--
@author Luca Hackel
the about fragment
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.AboutFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_marginTop="60dp"
        android:layout_height="match_parent"
        android:requiresFadingEdge="vertical"
        android:fadingEdgeLength="30dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"

                android:src="@mipmap/ic_launcher_round" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold" />

            <!---->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="25dp"
                android:paddingStart="80dp"
                android:text="@string/about_section_title"
                android:textAppearance="@android:style/TextAppearance.Material.Large"
                android:textColor="?colorSecondary"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">



                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="80dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="5dp"
                        android:text="A Project by"
                        android:textColor="@android:color/white"
                        android:textAppearance="@android:style/TextAppearance.Material.Small"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="80dp"
                        android:paddingBottom="20dp"
                        android:text="@string/dev_names"
                        android:textAppearance="@android:style/TextAppearance.Material.Small" />
                </LinearLayout>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_about_pages"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:text="VISIT THEIR PAGES"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="80dp"
                android:paddingTop="10dp"
                android:paddingBottom="5dp"
                android:textColor="@android:color/white"
                android:text="For"
                android:textAppearance="@android:style/TextAppearance.Material.Small"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="80dp"
                android:paddingBottom="20dp"
                android:text="Material Gain"
                android:textAppearance="@android:style/TextAppearance.Material.Small" />

            <!---->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="25dp"
                android:paddingStart="80dp"
                android:text="@string/legal_section_title"
                android:textAppearance="@android:style/TextAppearance.Material.Large"
                android:textColor="?colorSecondary"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="80dp"
                android:paddingTop="10dp"
                android:paddingBottom="5dp"
                android:textColor="@android:color/white"
                android:text="App License"
                android:textAppearance="@android:style/TextAppearance.Material.Small"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="80dp"
                android:paddingBottom="20dp"
                android:text="@string/app_license"
                android:textAppearance="@android:style/TextAppearance.Material.Small" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="80dp"
                android:paddingTop="10dp"
                android:paddingBottom="5dp"
                android:text="Third-Party Licenses"
                android:textColor="@android:color/white"
                android:textAppearance="@android:style/TextAppearance.Material.Small"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="80dp"
                android:paddingBottom="20dp"
                android:text="@string/third_party_licenses"
                android:textAppearance="@android:style/TextAppearance.Material.Small" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="60dp"/>
        </LinearLayout>
    </ScrollView>
</FrameLayout>